# lvqr

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  audit.toml  explainer.html
bindings/python/: CHANGELOG.md  pyproject.toml
bindings/python/tests/: test_client.py
crates/lvqr-admin/: Cargo.toml  README.md
crates/lvqr-admin/src/: cluster_routes.rs  config_reload_routes.rs  lib.rs  routes.rs  server_info_routes.rs  slo.rs  streamkey_routes.rs
crates/lvqr-admin/tests/: slo_assets.rs
crates/lvqr-agent/: Cargo.toml
crates/lvqr-agent-whisper/: Cargo.toml
crates/lvqr-agent-whisper/src/: agent.rs  asc.rs  caption.rs  decode.rs  factory.rs  lib.rs  mdat.rs  worker.rs
crates/lvqr-agent-whisper/tests/: whisper_basic.rs
crates/lvqr-agent/src/: agent.rs  factory.rs  lib.rs  runner.rs
crates/lvqr-agent/tests/: integration_basic.rs
crates/lvqr-archive/: Cargo.toml
crates/lvqr-archive/benches/: io_uring_vs_std.rs
crates/lvqr-archive/src/: error.rs  index.rs  lib.rs  provenance.rs  segment.rs  writer.rs
crates/lvqr-archive/tests/: c2pa_sign.rs
crates/lvqr-auth/: Cargo.toml
crates/lvqr-auth/src/: error.rs  extract.rs  hot_reload_provider.rs  jwks_provider.rs  jwt_provider.rs  lib.rs  multi_key_provider.rs  noop.rs  provider.rs  static_provider.rs  stream_key_store.rs  webhook_provider.rs
crates/lvqr-cli/: Cargo.toml  README.md
crates/lvqr-cli/src/: archive.rs  auth_middleware.rs  captions.rs  cluster_claim.rs  config.rs  config_file.rs  config_reload.rs  handle.rs  hls.rs  lib.rs  main.rs  scte35_bridge.rs  signed_url.rs  ws.rs
crates/lvqr-cli/tests/: archive_dvr_read_e2e.rs  auth_integration.rs  c2pa_cli_flags_e2e.rs  c2pa_verify_e2e.rs  captions_hls_e2e.rs  cluster_claim_bridge.rs  cluster_redirect.rs  config_reload_e2e.rs  federation_reconnect.rs  federation_two_cluster.rs  hls_live_auth_e2e.rs  live_signed_url_e2e.rs  mesh_capacity_e2e.rs  mesh_ws_registration_e2e.rs  one_token_all_protocols.rs  playback_signed_url_e2e.rs  rtmp_archive_e2e.rs  rtmp_dash_e2e.rs  rtmp_hls_e2e.rs  rtmp_whep_audio_e2e.rs  rtmp_ws_e2e.rs  rtsp_hls_e2e.rs  scte35_hls_dash_e2e.rs  signal_auth_e2e.rs  slo_latency_e2e.rs  srt_dash_e2e.rs  srt_hls_e2e.rs  streamkeys_e2e.rs  transcode_ladder_e2e.rs  wasm_filter_admin_route.rs  wasm_filter_chain.rs  wasm_frame_counter.rs  wasm_hot_reload.rs  whip_hls_e2e.rs  whisper_cli_e2e.rs
crates/lvqr-cluster/: Cargo.toml
crates/lvqr-cluster/src/: broadcast.rs  capacity.rs  config.rs  endpoints.rs  federation.rs  lib.rs
crates/lvqr-cluster/tests/: capacity.rs  config.rs  endpoints.rs  federation_unit.rs  ownership.rs  two_nodes.rs
crates/lvqr-cmaf/: Cargo.toml
crates/lvqr-cmaf/benches/: cmaf.rs
crates/lvqr-cmaf/fuzz/: Cargo.toml
crates/lvqr-cmaf/src/: chunk.rs  coalescer.rs  init.rs  lib.rs  policy.rs  sample.rs  segmenter.rs
crates/lvqr-cmaf/tests/: conformance_coalescer.rs  conformance_init.rs  integration_sample_segmenter.rs  integration_segmenter.rs  proptest_policy.rs
crates/lvqr-codec/: Cargo.toml
crates/lvqr-codec/benches/: ts_demuxer.rs
crates/lvqr-codec/fuzz/: Cargo.toml
crates/lvqr-codec/src/: aac.rs  bit_reader.rs  error.rs  hevc.rs  lib.rs  scte35.rs  ts.rs
crates/lvqr-codec/tests/: conformance_codec.rs  integration_parsers.rs  proptest_aac.rs  proptest_hevc.rs  proptest_scte35.rs  proptest_ts.rs
crates/lvqr-conformance/: Cargo.toml  README.md
crates/lvqr-conformance/fixtures/: README.md
crates/lvqr-conformance/src/: lib.rs
crates/lvqr-core/: Cargo.toml  README.md
crates/lvqr-core/benches/: fanout.rs  ringbuffer.rs
crates/lvqr-core/src/: error.rs  events.rs  gop.rs  lib.rs  registry.rs  ringbuf.rs  types.rs
crates/lvqr-dash/: Cargo.toml
crates/lvqr-dash/fuzz/: Cargo.toml
crates/lvqr-dash/src/: bridge.rs  lib.rs  mpd.rs  server.rs
crates/lvqr-dash/tests/: golden_mpd.rs  integration_router.rs  proptest_mpd.rs
crates/lvqr-fragment/: Cargo.toml
crates/lvqr-fragment/src/: broadcaster.rs  fragment.rs  lib.rs  moq_sink.rs  moq_stream.rs  moq_timing_sink.rs  registry.rs  stream.rs
crates/lvqr-fragment/tests/: integration_sink.rs  moq_stream_roundtrip.rs  proptest_broadcaster.rs  proptest_fragment.rs  proptest_registry.rs
crates/lvqr-hls/: Cargo.toml
crates/lvqr-hls/benches/: playlist_builder.rs
crates/lvqr-hls/fuzz/: Cargo.toml
crates/lvqr-hls/src/: lib.rs  manifest.rs  master.rs  server.rs  subtitles.rs
crates/lvqr-hls/tests/: conformance_manifest.rs  integration_builder.rs  integration_master.rs  integration_server.rs  proptest_manifest.rs
crates/lvqr-ingest/: Cargo.toml  README.md
crates/lvqr-ingest/fuzz/: Cargo.toml  README.md
crates/lvqr-ingest/src/: bridge.rs  dispatch.rs  error.rs  lib.rs  observer.rs  protocol.rs  rtmp.rs
crates/lvqr-ingest/tests/: golden_fmp4.rs  parity_avc_init.rs  parity_avc_segment.rs  proptest_parsers.rs  rtmp_bridge_integration.rs  scte35_rtmp_oncuepoint_e2e.rs
crates/lvqr-mesh/: Cargo.toml  README.md
crates/lvqr-mesh/src/: coordinator.rs  error.rs  lib.rs  tree.rs
crates/lvqr-moq/: Cargo.toml
crates/lvqr-moq/src/: lib.rs
crates/lvqr-moq/tests/: integration_origin.rs  proptest_facade.rs
crates/lvqr-observability/: Cargo.toml
crates/lvqr-observability/src/: lib.rs  log_format.rs  metric_bridge.rs
crates/lvqr-observability/tests/: log_correlation.rs  metric_export.rs  span_export.rs
crates/lvqr-record/: Cargo.toml
crates/lvqr-record/src/: error.rs  lib.rs  recorder.rs
crates/lvqr-record/tests/: proptest_recorder.proptest-regressions  proptest_recorder.rs  record_conformance.rs  record_integration.rs
crates/lvqr-relay/: Cargo.toml  README.md
crates/lvqr-relay/src/: error.rs  lib.rs  protocol.rs  server.rs
crates/lvqr-rtsp/: Cargo.toml
crates/lvqr-signal/: Cargo.toml  README.md
crates/lvqr-soak/: Cargo.toml
crates/lvqr-srt/: Cargo.toml
crates/lvqr-test-utils/: Cargo.toml
crates/lvqr-transcode/: Cargo.toml
crates/lvqr-wasm/: Cargo.toml  README.md
crates/lvqr-whep/: Cargo.toml
docs/: auth.md  (+10 more)
(+223 files in other folders)
