[workspace]
resolver = "2"
# crates/lvqr-ingest/fuzz is intentionally excluded; libfuzzer-sys requires
# nightly rustc and sanitizer instrumentation. Run with:
#   cargo +nightly fuzz run parse_video_tag
exclude = [
    "crates/lvqr-ingest/fuzz",
    "crates/lvqr-codec/fuzz",
    "crates/lvqr-whep/fuzz",
    "crates/lvqr-whip/fuzz",
    "crates/lvqr-dash/fuzz",
    "crates/lvqr-hls/fuzz",
    "crates/lvqr-cmaf/fuzz",
]
members = [
    "crates/lvqr-core",
    "crates/lvqr-moq",
    "crates/lvqr-fragment",
    "crates/lvqr-codec",
    "crates/lvqr-cmaf",
    "crates/lvqr-hls",
    "crates/lvqr-dash",
    "crates/lvqr-relay",
    "crates/lvqr-mesh",
    "crates/lvqr-ingest",
    "crates/lvqr-whep",
    "crates/lvqr-whip",
    "crates/lvqr-archive",
    "crates/lvqr-signal",
    "crates/lvqr-admin",
    "crates/lvqr-auth",
    "crates/lvqr-conformance",
    "crates/lvqr-record",
    "crates/lvqr-rtsp",
    "crates/lvqr-srt",
    "crates/lvqr-cli",
    "crates/lvqr-test-utils",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virgilvox/lvqr"
homepage = "https://github.com/virgilvox/lvqr"
rust-version = "1.85"
authors = ["Moheeb Zara <hackbuildvideo@gmail.com>"]

[workspace.dependencies]
# MoQ ecosystem
moq-lite = "0.15"
moq-native = "0.13"

# QUIC / WebTransport
quinn = "0.11"
web-transport-quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Buffers and concurrency
bytes = "1"
parking_lot = "0.12"
dashmap = "6"

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TLS cert generation
rcgen = "0.13"

# URL parsing
url = "2"

# Benchmarks
criterion = "0.5"

# RTMP
rml_rtmp = "0.8"

# H.264 parsing
h264-reader = "0.7"

# Random
rand = "0.8"

# Base64 (SDP sprop-parameter-sets encoding)
base64 = "0.22"

# Authentication
jsonwebtoken = "9"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Internal crates
lvqr-core = { version = "0.4.0", path = "crates/lvqr-core" }
lvqr-moq = { version = "0.4.0", path = "crates/lvqr-moq" }
lvqr-fragment = { version = "0.4.0", path = "crates/lvqr-fragment" }
lvqr-codec = { version = "0.4.0", path = "crates/lvqr-codec" }
lvqr-cmaf = { version = "0.4.0", path = "crates/lvqr-cmaf" }
lvqr-hls = { version = "0.4.0", path = "crates/lvqr-hls" }
lvqr-dash = { version = "0.4.0", path = "crates/lvqr-dash" }
lvqr-relay = { version = "0.4.0", path = "crates/lvqr-relay" }
lvqr-mesh = { version = "0.4.0", path = "crates/lvqr-mesh" }
lvqr-ingest = { version = "0.4.0", path = "crates/lvqr-ingest" }
lvqr-whep = { version = "0.4.0", path = "crates/lvqr-whep" }
lvqr-whip = { version = "0.4.0", path = "crates/lvqr-whip" }
lvqr-archive = { version = "0.4.0", path = "crates/lvqr-archive" }
lvqr-signal = { version = "0.4.0", path = "crates/lvqr-signal" }
lvqr-admin = { version = "0.4.0", path = "crates/lvqr-admin" }
lvqr-auth = { version = "0.4.0", path = "crates/lvqr-auth" }
lvqr-conformance = { version = "0.4.0", path = "crates/lvqr-conformance" }
lvqr-record = { version = "0.4.0", path = "crates/lvqr-record" }
lvqr-rtsp = { version = "0.4.0", path = "crates/lvqr-rtsp" }
lvqr-srt = { version = "0.4.0", path = "crates/lvqr-srt" }
lvqr-test-utils = { version = "0.4.0", path = "crates/lvqr-test-utils" }
lvqr-cli = { version = "0.4.0", path = "crates/lvqr-cli" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
