[workspace]
resolver = "2"
# crates/lvqr-ingest/fuzz is intentionally excluded; libfuzzer-sys requires
# nightly rustc and sanitizer instrumentation. Run with:
#   cargo +nightly fuzz run parse_video_tag
exclude = [
    "crates/lvqr-ingest/fuzz",
    "crates/lvqr-codec/fuzz",
    "crates/lvqr-whep/fuzz",
    "crates/lvqr-whip/fuzz",
    "crates/lvqr-dash/fuzz",
    "crates/lvqr-hls/fuzz",
    "crates/lvqr-cmaf/fuzz",
    "crates/lvqr-rtsp/fuzz",
]
members = [
    "crates/lvqr-core",
    "crates/lvqr-moq",
    "crates/lvqr-fragment",
    "crates/lvqr-codec",
    "crates/lvqr-cmaf",
    "crates/lvqr-hls",
    "crates/lvqr-dash",
    "crates/lvqr-relay",
    "crates/lvqr-mesh",
    "crates/lvqr-ingest",
    "crates/lvqr-whep",
    "crates/lvqr-whip",
    "crates/lvqr-archive",
    "crates/lvqr-signal",
    "crates/lvqr-admin",
    "crates/lvqr-auth",
    "crates/lvqr-conformance",
    "crates/lvqr-record",
    "crates/lvqr-rtsp",
    "crates/lvqr-srt",
    "crates/lvqr-cli",
    "crates/lvqr-cluster",
    "crates/lvqr-observability",
    "crates/lvqr-soak",
    "crates/lvqr-test-utils",
    "crates/lvqr-wasm",
    "crates/lvqr-agent",
    "crates/lvqr-agent-whisper",
    "crates/lvqr-transcode",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
# LVQR is dual-licensed: AGPL-3.0-or-later for open-source use and commercial
# terms for proprietary / SaaS deployments. See COMMERCIAL-LICENSE.md at the
# repo root for the commercial-license process; LICENSE contains the AGPL
# text.
license = "AGPL-3.0-or-later"
repository = "https://github.com/virgilvox/lvqr"
homepage = "https://github.com/virgilvox/lvqr"
rust-version = "1.85"
authors = ["Moheeb Zara <hackbuildvideo@gmail.com>"]

[workspace.dependencies]
# MoQ ecosystem
moq-lite = "0.15"
moq-native = "0.13"

# QUIC / WebTransport
quinn = "0.11"
web-transport-quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Buffers and concurrency
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
# Atomic Arc swap for hot-reloadable config state (session 147).
# RCU-style readers (single-digit ns load on x86) so the auth-check
# hot path stays uncontended.
arc-swap = "1"

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TLS cert generation
rcgen = "0.13"

# URL parsing
url = "2"

# Benchmarks
criterion = "0.5"

# Cluster gossip (Tier 3)
chitchat = "0.10"

# RTMP
rml_rtmp = "0.8"

# H.264 parsing
h264-reader = "0.7"

# Random
rand = "0.8"

# Base64 (SDP sprop-parameter-sets encoding + HMAC URL signatures)
base64 = "0.22"

# Authentication
jsonwebtoken = "9"

# HTTP client for JWKS dynamic key discovery (PLAN row 120). Default features
# disabled so we avoid the openssl + native-tls + gzip + blocking-runtime surface
# we do not need; rustls-tls + json are the only bits the JWKS refresher touches.
# Shares the ring crypto provider already pulled in by `rustls`/`jsonwebtoken`,
# so there is no extra TLS backend in the link graph. Workspace-pinned so only
# lvqr-auth under `--features jwks` pulls it in; default builds never link it.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# JWKS tests (and future HTTP-mocking tests) use wiremock for a real localhost
# HTTP server returning scripted responses. Dev-only; no release-build impact.
wiremock = "0.6"

# HMAC-SHA256 for signed playback URLs. `sha2` is the hash backend;
# `subtle` gives the constant-time comparison that prevents timing
# oracles on signature verification. All three already appear in the
# workspace graph transitively; pinning them here makes the direct
# use in lvqr-cli explicit.
hmac = "0.12"
sha2 = "0.10"
subtle = "2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# metrics-util powers FanoutBuilder so lvqr-cli can install both the
# Prometheus recorder AND the OTLP-bridging recorder at once when the
# operator enables both paths. Version matches the one already pulled
# transitively by metrics-exporter-prometheus.
metrics-util = "0.19"

# OpenTelemetry (Tier 3 observability plane, sessions H-J). Pin the exact
# versions from tracking/TIER_3_PLAN.md's "Dependencies to pin" table; any
# upgrade gets its own session. `tracing-opentelemetry` 0.28 targets the
# `opentelemetry*` 0.27 line per upstream release cadence.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.28"

# WASM host (Tier 4 item 4.2). Component model + WASI 0.2 stable as of 25.0.
# Any upgrade gets its own session per TIER_4_PLAN.md dependency-pin table.
# `notify` is pulled in at session A for session-87's hot-reload path.
wasmtime = { version = "25", default-features = false, features = ["runtime", "cranelift"] }
notify = "6"

# io_uring runtime for the lvqr-archive `io-uring` feature (Tier 4 item 4.1,
# session 89 A2). Pinned to 0.5 per TIER_4_PLAN.md's "Dependencies to pin"
# table. Listed at the workspace level so the version is a single-file change,
# but pulled in only under `[target.'cfg(target_os = "linux")'.dependencies]`
# in `lvqr-archive` so macOS + Windows builds never see it in their dep graph.
tokio-uring = "0.5"

# gstreamer-rs 0.23 series (Tier 4 item 4.6 session 105 B). Pinned because
# 0.24 bumped the MSRV beyond our 1.85 floor and shifted a handful of AppSrc
# builder method names; any future upgrade gets its own session per the
# "Dependencies to pin" table below. The optional dep set is pulled in only
# by `lvqr-transcode` under `--features transcode`; default builds never link
# any of it. Runtime requirement is GStreamer 1.22+ with `gst-plugins-base`,
# `gst-plugins-good`, `gst-plugins-bad`, `gst-plugins-ugly`, plus `gst-libav`
# (for `avdec_h264`); install recipes live in the 4.6 section of
# `tracking/TIER_4_PLAN.md`.
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
glib = "0.20"

# C2PA provenance (Tier 4 item 4.3). Pinned to 0.80 because c2pa-rs is
# pre-1.0 and the `Builder` / `Signer` API shape has moved between releases;
# any upgrade gets its own session per TIER_4_PLAN.md's "Dependencies to
# pin" row. Pulled in by `lvqr-archive` only when built with `--features
# c2pa` (default off). We disable c2pa-rs's default features (which pull
# the vendored OpenSSL C build + reqwest + ureq for remote-manifest fetch)
# and opt into `rust_native_crypto` so the crypto closure stays
# pure-Rust; LVQR signs in-process and does not need the remote-manifest
# HTTP stacks.
c2pa = { version = "0.80", default-features = false, features = ["rust_native_crypto"] }

# Internal crates
lvqr-core = { version = "0.4.1", path = "crates/lvqr-core" }
lvqr-moq = { version = "0.4.1", path = "crates/lvqr-moq" }
lvqr-fragment = { version = "0.4.1", path = "crates/lvqr-fragment" }
lvqr-codec = { version = "0.4.1", path = "crates/lvqr-codec" }
lvqr-cmaf = { version = "0.4.1", path = "crates/lvqr-cmaf" }
lvqr-hls = { version = "0.4.1", path = "crates/lvqr-hls" }
lvqr-dash = { version = "0.4.1", path = "crates/lvqr-dash" }
lvqr-relay = { version = "0.4.1", path = "crates/lvqr-relay" }
lvqr-mesh = { version = "0.4.1", path = "crates/lvqr-mesh" }
lvqr-ingest = { version = "0.4.1", path = "crates/lvqr-ingest" }
lvqr-whep = { version = "0.4.1", path = "crates/lvqr-whep" }
lvqr-whip = { version = "0.4.1", path = "crates/lvqr-whip" }
lvqr-archive = { version = "0.4.1", path = "crates/lvqr-archive" }
lvqr-signal = { version = "0.4.1", path = "crates/lvqr-signal" }
lvqr-admin = { version = "0.4.1", path = "crates/lvqr-admin" }
lvqr-auth = { version = "0.4.1", path = "crates/lvqr-auth" }
# publish = false; path-only so consumer dev-dep manifests stay strippable on `cargo publish`.
lvqr-conformance = { path = "crates/lvqr-conformance" }
lvqr-record = { version = "0.4.1", path = "crates/lvqr-record" }
lvqr-rtsp = { version = "0.4.1", path = "crates/lvqr-rtsp" }
lvqr-srt = { version = "0.4.1", path = "crates/lvqr-srt" }
# publish = false; path-only so consumer dev-dep manifests stay strippable on `cargo publish`.
lvqr-test-utils = { path = "crates/lvqr-test-utils" }
lvqr-cli = { version = "0.4.1", path = "crates/lvqr-cli" }
lvqr-cluster = { version = "0.4.1", path = "crates/lvqr-cluster" }
lvqr-observability = { version = "0.4.1", path = "crates/lvqr-observability" }
# publish = false; path-only on principle (no consumer dev-deps on it today).
lvqr-soak = { path = "crates/lvqr-soak" }
lvqr-wasm = { version = "0.4.1", path = "crates/lvqr-wasm" }
lvqr-agent = { version = "0.4.1", path = "crates/lvqr-agent" }
lvqr-agent-whisper = { version = "0.4.1", path = "crates/lvqr-agent-whisper" }
lvqr-transcode = { version = "0.4.1", path = "crates/lvqr-transcode" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
