[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvqr"
version = "0.3.1"
description = "LVQR client for Python - Live Video QUIC Relay admin and monitoring"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Moheeb Zara", email = "hackbuildvideo@gmail.com"}]
keywords = ["streaming", "video", "quic", "moq", "relay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/virgilvox/lvqr"
Documentation = "https://github.com/virgilvox/lvqr/tree/main/bindings/python"

[tool.hatch.build.targets.wheel]
packages = ["python/lvqr"]
