[package]
name = "lvqr-admin"
description = "HTTP API, stats, and health checks for LVQR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "admin", "api"]
categories = ["multimedia", "network-programming"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-auth = { workspace = true }
lvqr-cluster = { workspace = true, optional = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
# Tier 4 item 4.7 session A: the `LatencyTracker` in `slo.rs` stores
# per-broadcast sample ring buffers behind a parking_lot RwLock so the
# hot-path `record` call and the cold-path admin snapshot do not contend.
parking_lot = { workspace = true }

[features]
default = ["cluster"]
# Enables the read-only `/api/v1/cluster/{nodes,broadcasts,config}`
# admin routes. Requires the caller to supply an `Arc<Cluster>` via
# `AdminState::with_cluster`. Default-on so a full LVQR build picks
# up the endpoints without extra configuration; deployments that do
# not cluster-enable LVQR can drop the dep with
# `--no-default-features`.
cluster = ["dep:lvqr-cluster"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
chitchat = { workspace = true }
# Session 103 C: cluster_routes tests construct a FederationRunner
# directly to exercise the /api/v1/cluster/federation route with a
# real FederationStatusHandle wired through AdminState.
lvqr-moq = { workspace = true }
tokio-util = { workspace = true }
