[package]
name = "lvqr-auth"
description = "Pluggable authentication providers for LVQR (static tokens, JWT, custom backends)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["auth", "jwt", "streaming", "lvqr"]
categories = ["authentication", "multimedia"]

[features]
default = []
jwt = ["dep:jsonwebtoken"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

jsonwebtoken = { workspace = true, optional = true }
