[package]
name = "lvqr-auth"
description = "Pluggable authentication providers for LVQR (static tokens, JWT, custom backends)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["auth", "jwt", "streaming", "lvqr"]
categories = ["authentication", "multimedia"]

[features]
default = []
jwt = ["dep:jsonwebtoken"]
# JWKS dynamic key discovery (PLAN row 120). Implies `jwt` because the JWKS
# provider reuses the `JwtClaims` shape and leans on jsonwebtoken for header
# parsing + signature verification. Adds reqwest (for the JWKS HTTP fetch) +
# tokio (for the periodic refresh task + Notify cache-miss kick) + url (for
# validating the configured JWKS URL at provider construction).
jwks = ["jwt", "dep:reqwest", "dep:tokio", "dep:url"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
# JWKS integration tests need a localhost HTTP mock server + a real key pair
# for signing tokens + the async runtime for driving the provider's async new().
# `base64` encodes the JWK `x` parameter from the rcgen-generated raw public
# key bytes.
wiremock = { workspace = true }
rcgen = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
