[package]
name = "lvqr-auth"
description = "Pluggable authentication providers for LVQR (static tokens, JWT, custom backends)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["auth", "jwt", "streaming", "lvqr"]
categories = ["authentication", "multimedia"]

[features]
default = []
jwt = ["dep:jsonwebtoken"]
# JWKS dynamic key discovery (PLAN row 120). Implies `jwt` because the JWKS
# provider reuses the `JwtClaims` shape and leans on jsonwebtoken for header
# parsing + signature verification. Adds reqwest (for the JWKS HTTP fetch) +
# tokio (for the periodic refresh task + Notify cache-miss kick) + url (for
# validating the configured JWKS URL at provider construction).
jwks = ["jwt", "dep:reqwest", "dep:tokio", "dep:url"]
# Webhook auth provider (PLAN Phase D). Delegates every AuthContext decision
# to an operator-configured HTTP endpoint. Shares the reqwest + tokio + url
# stack with `jwks` without pulling `jsonwebtoken` since no JWT decoding
# happens on this path.
webhook = ["dep:reqwest", "dep:tokio", "dep:url"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Stream-key store (session 146): DashMap backs the InMemoryStreamKeyStore;
# rand+base64 generate the typed-prefix token (`lvqr_sk_<32-byte CSPRNG>`)
# and the operator-facing key id.
dashmap = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
# Hot-reloadable AuthProvider wrapper (session 147): ArcSwap stores
# the current SharedAuth so SIGHUP / admin POST can replace it
# atomically while in-flight `check()` calls finish against the prior
# snapshot.
arc-swap = { workspace = true }

jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
# JWKS integration tests need a localhost HTTP mock server + a real key pair
# for signing tokens + the async runtime for driving the provider's async new().
# `base64` encodes the JWK `x` parameter from the rcgen-generated raw public
# key bytes (workspace dep above already pulls it in for the stream-key store).
wiremock = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
