[package]
name = "lvqr-cli"
description = "LVQR single binary entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "server", "quic", "moq"]
categories = ["multimedia", "network-programming", "command-line-utilities"]

[lib]
name = "lvqr_cli"
path = "src/lib.rs"

[[bin]]
name = "lvqr"
path = "src/main.rs"

[features]
default = ["rtmp", "quinn-transport", "cmaf-writer"]
full = ["rtmp", "quinn-transport", "cmaf-writer"]
rtmp = ["lvqr-ingest/rtmp"]
quinn-transport = ["lvqr-relay/quinn-transport"]
# Forward-flag for `lvqr-ingest/cmaf-writer`. Enabled by default as of
# session 12.2 alongside `lvqr-ingest`'s own default flip. The flag
# stays exposed on `lvqr-cli` so the legacy CI job in
# `.github/workflows/ci.yml` can drop it via
# `--no-default-features --features rtmp,quinn-transport` and
# exercise the in-crate hand-rolled fMP4 writer end-to-end until the
# legacy path is removed. Requires `lvqr-ingest` to be pulled in with
# `default-features = false` (see `[dependencies]`) so disabling this
# flag truly disables the `cmaf-writer` dep edge on `lvqr-ingest`.
cmaf-writer = ["lvqr-ingest/cmaf-writer"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-relay = { workspace = true }
lvqr-moq = { workspace = true }
moq-lite = { workspace = true }
lvqr-mesh = { workspace = true }
# Session 12.2: declared inline rather than via `workspace = true` so
# the `cmaf-writer`/`legacy-fmp4` feature forwarding can disable
# `lvqr-ingest`'s defaults from this crate. Cargo disallows overriding
# a workspace dep's `default-features` when the workspace inherits,
# so the path dep is inlined here. Version stays pinned to the
# workspace version to keep the graph consistent.
lvqr-ingest = { version = "0.3.1", path = "../lvqr-ingest", default-features = false }
lvqr-signal = { workspace = true }
lvqr-admin = { workspace = true }
lvqr-auth = { workspace = true, features = ["jwt"] }
lvqr-record = { workspace = true }
lvqr-fragment = { workspace = true }
lvqr-cmaf = { workspace = true }
lvqr-hls = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Real RTMP client for the RTMP -> WS E2E test.
rml_rtmp = { workspace = true }
# WebSocket client for the RTMP -> WS E2E test.
tokio-tungstenite = "0.24"
tracing-subscriber = { workspace = true }
tower = { workspace = true }
http = "1"
# Full-stack TestServer for auth_integration.rs.
lvqr-test-utils = { workspace = true }
# JWT minting in auth_integration.rs. Matches the version pulled in
# transitively through `lvqr-auth/jwt`.
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
